# SQL-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: query_samples.txt
scripts/: load_csv.py
src/sql_agent/: __init__.py  agent.py  cli.py  database.py  safety.py  settings.py  state.py  web.py
src/sql_agent/nodes/: __init__.py  generate_reply.py  generate_sql.py  validate_sql.py
src/sql_agent/tools/: __init__.py  execute_sql.py  get_schema.py  list_tables.py
src/sql_agent/web/: app.js  index.html  styles.css
tests/: __init__.py  test_safety.py  test_web.py
