[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-agent"
version = "0.1.0"
description = "A read-only analytical SQL agent for Microsoft SQL Server."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-ollama",
    "langgraph",
    "pandas",
    "pyodbc",
    "sqlalchemy",
    "sqlglot",
    "uvicorn",
]

[project.scripts]
sql-agent = "sql_agent.cli:main"
sql-agent-web = "sql_agent.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sql_agent = ["web/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
